@@ -662,13 +662,6 @@ static void _update_sinfo(sinfo_data_t *sinfo_ptr, node_info_t *node_ptr,
 				     &error_cpus);
 
 	if(params.cluster_flags & CLUSTER_FLAG_BG) {
-		if(error_cpus) {
-			xfree(node_ptr->reason);
-			node_ptr->reason = xstrdup("Block(s) in error state");
-			sinfo_ptr->reason     = node_ptr->reason;
-			sinfo_ptr->reason_time= node_ptr->reason_time;
-			sinfo_ptr->reason_uid = node_ptr->reason_uid;
-		}
 		if(!params.match_flags.state_flag
 		   && (used_cpus || error_cpus)) {
 			/* We only get one shot at this (because all states
@@ -741,6 +734,17 @@ static int _insert_node_ptr(List sinfo_list, uint16_t part_num,
 	int rc = SLURM_SUCCESS;
 	sinfo_data_t *sinfo_ptr = NULL;
 	ListIterator itr = NULL;
+
+	if(params.cluster_flags & CLUSTER_FLAG_BG) {
+		uint16_t error_cpus = 0;
+		select_g_select_nodeinfo_get(node_ptr->select_nodeinfo,
+					     SELECT_NODEDATA_SUBCNT,
+					     NODE_STATE_ERROR,
+					     &error_cpus);
+
+		if(error_cpus && !node_ptr->reason)
+			node_ptr->reason = xstrdup("Block(s) in error state");
+	}
 
 	itr = list_iterator_create(sinfo_list);
 	while ((sinfo_ptr = list_next(itr))) {
